# bitcask

./: Cargo.toml  README.md
bitcask-lib/: Cargo.toml  README.md
bitcask-lib/src/: active_file.rs  datastore.rs  datastore_entry.rs  datastore_error.rs  keydir_entry.rs  keys.rs  lib.rs  open_options.rs  timestamp.rs
bitcask-repl/: Cargo.toml  README.md
bitcask-repl/src/: context.rs  custom_errors.rs  custom_prompt.rs  lib.rs  main.rs  run_config.rs
