[package]
name = "bitcask-lib"
version = "0.0.0"
authors = ["Fabian Vilers <fabian.vilers@dev-one.com>"]
edition = "2021"
description = "A disk based KV store (inspired by the Bitcask implementation)"
readme = "README.md"
repository = "https://github.com/fvilers/bitcask"
license = "MIT"
keywords = ["key-value", "bitscask", "kv-store"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "3.0.1"
itertools = "0.10.5"
